tests/snapshots/convert__Prop__key.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    key: a
}, null);

