tests/snapshots/convert__Prop__namespace.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    "ns:name": a
}, null, 8, [
    "ns:name"
]);

