tests/snapshots/convert__Prop__r#ref.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    ref: a
}, null, 512);

