tests/snapshots/convert__Prop__spread.snap
---
source: tests/convert.rs
expression: code
---
import { mergeProps, createVNode } from "vue";
createVNode("div", mergeProps(a), null, 16);

