tests/snapshots/convert__Prop__spread_with_prop.snap
---
source: tests/convert.rs
expression: code
---
import { mergeProps, createVNode } from "vue";
createVNode("div", mergeProps(a, {
    "class": "cls"
}), null, 16);

