tests/snapshots/convert__Prop__verify_symbol.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", {
    "prop-name": a
}, null, 8, [
    "prop-name"
]);

